# CPP

./: tash apply stash@{0}
Abstraction/Abstraction_example/: CMakeLists.txt  battery.cpp  battery.h  main.cpp  mobile.cpp  mobile.h
Class,obj,access Specifiers/Class/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
Class,obj,access Specifiers/ClassTask/: CMakeLists.txt  School.cpp  School.h  Student.cpp  Student.h  main.cpp
Class,obj,access Specifiers/Copy_Constructor/: CMakeLists.txt  a.cpp  a.h  main.cpp
Class,obj,access Specifiers/Demo/: CMakeLists.txt  demo.cpp  demo.h  laptop.cpp  laptop.h  main.cpp  pen.cpp  pen.h
Class,obj,access Specifiers/accessSpecifiers/: CMakeLists.txt  Likhitha.cpp  Likhitha.h  main.cpp
Deerendra Sir Task/AC_task/: CMakeLists.txt  ac.cpp  ac.h  finolex.cpp  finolex.h  havells.cpp  havells.h  main.cpp  polycab.cpp  polycab.h  switch.cpp  switch.h
Deerendra Sir Task/Calendar/: Calendar.pro  bookingmanager.cpp  bookingmanager.h  calendar.cpp  calendar.h  date.cpp  date.h  main.cpp  month.cpp  movietheater.cpp
Deerendra Sir Task/Calendar_QT/: Calendar_QT.pro  MyPushbutton.cpp  MyPushbutton.h  MyWidget.cpp  main.cpp
Deerendra Sir Task/Light_Switch_Vector/: CMakeLists.txt  light.cpp  light.h  main.cpp  switch.cpp  switch.h  wire.cpp  wire.h
Deerendra Sir Task/Light_and_Switch_Task/: CMakeLists.txt  light.cpp  light.h  main.cpp  switch.cpp  switch.h  wire.cpp  wire.h
Deerendra Sir Task/Plugin/: CMakeLists.txt  csv.cpp  csv.h  fileoperations.cpp  fileoperations.h  json.cpp  json.h  main.cpp  student.cpp  student.h  studentmanagement.cpp  studentmanagement.h  xml.cpp  xml.h
Deerendra Sir Task/QWidget/: QWidget.pro  QpaintEvent.cpp  abc.h  main.cpp  qpaintevent.h
Deerendra Sir Task/Q_Widget/: CMakeLists.txt  qpaintevent.cpp  qpaintevent.h  qwidget.cpp  qwidget.h
Deerendra Sir Task/TaskOnQT/: TaskOnQT.pro  main.cpp  mybutton.cpp  mybutton.h  mycheckbox.cpp  mycheckbox.h  mydoublespinbox.cpp  mydoublespinbox.h  myradiobutton.cpp  myradiobutton.h  myscrollbar.cpp  myscrollbar.h  myslider.cpp  myslider.h  myspinbox.cpp  myspinbox.h  mytoolbutton.cpp  mytoolbutton.h
Deerendra Sir Task/Task_On_QWidget/: ABC.cpp  ABC.h  DBC.cpp  DBC.h  Task_On_QWidget.pro  main.cpp
Deerendra Sir Task/Wire_Connection/: CMakeLists.txt  ac.cpp  ac.h  finolex.cpp  finolex.h  havells.cpp  havells.h  main.cpp  polycab.cpp  polycab.h  switch.cpp  switch.h  wire.cpp  wire.h
Deerendra Sir Task/Wire_finolex_polycab_Havells/: CMakeLists.txt  finolex.cpp  finolex.h  havells.cpp  havells.h  main.cpp  polycab.cpp  polycab.h  wire.cpp  wire.h
Encapsulation/encapsulation_get_set/: CMakeLists.txt  base.cpp  base.h  main.cpp
Friend/Friend/: CMakeLists.txt  likhitha.cpp  likhitha.h  main.cpp  person.cpp  person.h
Friend/Friend_Class_example/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
Friend/Friend_using_inheritence/: CMakeLists.txt  base.cpp  base.h  derived.cpp  derived.h  main.cpp
Inheritence/Diamond_Problem/: CMakeLists.txt  cngengine.cpp  cngengine.h  engine.cpp  engine.h  hybrid.cpp  hybrid.h  main.cpp  petrolengine.cpp  petrolengine.h
Inheritence/Inheritence/: CMakeLists.txt  benz.cpp  benz.h  bmw.cpp  bmw.h  car.cpp  car.h  main.cpp
Inheritence/Inheritence_Task/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  d.cpp  d.h  main.cpp
Inheritence/MultiLevel_Inheritence/: CMakeLists.txt  main.cpp  result.cpp  result.h  student.cpp  student.h  test.cpp  test.h
Inheritence/Multiple_Inheritence/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  music.cpp  music.h  phone.cpp  phone.h  smartphone.cpp  smartphone.h
Name Space/name_space/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
Name Space/using_namespace_pthinks/: CMakeLists.txt  employee.cpp  employee.h  employee1.cpp  employee1.h  main.cpp
Pointers/27_01_2025_task_pointers/: CMakeLists.txt  main.cpp  student.cpp  student.h
Polymorphism/Function Overloading/: CMakeLists.txt  discount.cpp  discount.h  main.cpp  shopping.cpp  shopping.h
Polymorphism/Function_Overiding/: CMakeLists.txt  base.cpp  base.h  derived.cpp  derived.h  main.cpp
Practice/Constructor/: CMakeLists.txt  main.cpp  pen.cpp  pen.h
Practice/Task1/: CMakeLists.txt  main.cpp  operations.cpp  operations.h
Practice/book_beginning/: CMakeLists.txt  main.cpp  mystatic.cpp  mystatic.h
Practice/display_larger_number/: CMakeLists.txt  main.cpp
Practice/loops_Task/: CMakeLists.txt  main.cpp
Practice/practice_1/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
Problems/Accending_and_decending_order_array/: CMakeLists.txt  main.cpp
Problems/Array_min_max/: CMakeLists.txt  main.cpp
Problems/Array_swapping_1st_and_3rd_index/: CMakeLists.txt  main.cpp
Problems/In_Array_to_check_even/: CMakeLists.txt  main.cpp
Problems/Reverse_a_num_and_find_small_and_largernum/: CMakeLists.txt  main.cpp
Projects/ABCD/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  d.cpp  main.cpp
Projects/Array_Task_sorting/: main.cpp
Projects/Car/: CMakeLists.txt  accelerator.cpp  accelerator.h  brake.cpp  brake.h  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
Projects/Car_Owner_driver_Task/: Car_Owner_driver_Task.pro  car.cpp  car.h  driver.cpp  driver.h  main.cpp  owner.cpp  owner.h  personaldetails.cpp  personaldetails.h
Projects/FileOperations_Class/: CMakeLists.txt  main.cpp  student.cpp  student.h
Projects/FileOperations_example/: CMakeLists.txt  main.cpp
Projects/File_Operations/: CMakeLists.txt  CsvfileOperations.cpp  CsvfileOperations.h  TxtFileOperations.cpp  TxtFileOperations.h  csv.cpp  csv.h  fileoperations.cpp  fileoperations.h  main.cpp  student.cpp  student.h  studentmanagement.cpp  studentmanagement.h  txt.cpp  txt.h
Projects/Function_pointers/: main.cpp
Projects/Shared_ptr/: main.cpp
Projects/Unique_ptr/: main.cpp
Projects/VehicalRent/: CMakeLists.txt  CashPayment.cpp  CashPayment.h  OnlinePayment.cpp  OnlinePayment.h  RentalBikeDetails.cpp  RentalBikeDetails.h  RentalCarDetails.cpp  RentalCarDetails.h  Rentalfileoperations.cpp  Rentalfileoperations.h  admindetails.cpp  (+30 more)
(+93 files in other folders)
