cmake_minimum_required(VERSION 3.16)

project(Copy_Constructor LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Copy_Constructor main.cpp
    a.h a.cpp)

include(GNUInstallDirs)
install(TARGETS Copy_Constructor
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
